--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@supabase/auth-ui-react": "^0.4.6",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.2",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -38,7 +38,7 @@
     "@types/uniqid": "^5.3.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.0.4",
     "postcss": "^8",
     "supabase": "^1.123.4",
     "tailwindcss": "^3.3.0",
