add :web-push notification

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen_vapid_keys": " web-push generate-vapid-keys [--json]"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -20,6 +21,7 @@
     "@supabase/auth-ui-react": "^0.4.6",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.2",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
@@ -36,6 +38,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uniqid": "^5.4.0",
     "use-sound": "^4.0.1",
+    "web-push": "^3.6.7",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
@@ -44,6 +47,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uniqid": "^5.3.4",
+    "@types/web-push": "^3.6.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
